2008-05-22  Roderic Morris  <roderic@ccs.neu.edu>

	* src/gui/widgets/tab.cpp, src/utils/sha256.cpp: Fix compile errors
	when compiling with GCC 4.3.

2008-05-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* INSTALL: Mention Subversion instead of CVS.

2008-05-19  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp: Implemented interpretation of names for
	NPCs and monsters.
	* src/npc.cpp, src/resources/npcdb.cpp, src/resources/npcdb.hpp: Added
	the possibility to add particle effects to NPCs in npcs.xml.

2008-05-16  David Athay  <ko2fan@gmail.com>

	*  src/gui/popupmenu.cpp: Applied QOAL's patch to fix popups at 
	bottom of the screen.

2008-05-15  David Athay  <ko2fan@gmail.com>

	* src/gui/widgets/tabbedarea.h, src/gui/widgets/tab.cpp,
	src/gui/widgets/tabbedarea.cpp, src/gui/widgets/tab.h,
	src/gui/chat.cpp, src/gui/guildwindow.cpp, src/CMakeLists.txt,
	src/Makefile.am, data/graphics/gui/tab.png,
	data/graphics/gui/tabselected.png, tmw.cbp: Added tab with image 
	based on button.
	* src/gui/chat.cpp: Fixed chat window scrolling.

2008-05-12  David Athay  <ko2fan@gmail.com>

	* src/Makefile.am, src/CMakeLists.txt: Fix building on other systems.

2008-05-09  David Athay  <ko2fan@gmail.com>

	*  src/gui/setup_keyboard.cpp, src/gui/setup.cpp,
	src/gui/widgets/tabbedarea.h, src/gui/widgets/tabbedarea.cpp,
	src/gui/chat.cpp, src/gui/tabbedcontainer.cpp, src/gui/skill.cpp,
	src/gui/setup_audio.cpp, src/gui/setup_video.cpp, 
	src/gui/setup_joystick.cpp, src/gui/tabbedcontainer.h, tmw.cbp: 
	Changed the tabbedarea to be transparant as before. Changed setup 
	window and skills dialog to use the new tabbed area. Removed tabbed
	container as it is no longer used. Fixed a crash with the chat window.

2008-05-08  David Athay  <ko2fan@gmail.com>

	* src/net/chathandler.cpp: Fixed initialisation in case.

2008-05-08  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/chathandler.cpp: Made say messages from being ID 0 display